--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.10.1",
+    "react-parallax-tilt": "^1.7.186",
     "react-router": "^6.15.0",
     "styled-components": "^6.0.7",
     "zod": "^3.22.4"
