--- a/package.json
+++ b/package.json
@@ -10,13 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.10",
-    "@fullcalendar/daygrid": "^6.1.10",
-    "@fullcalendar/timegrid": "^6.1.10",
-    "@hookform/resolvers": "^3.3.2",
-    "@nivo/core": "^0.84.0",
-    "@nivo/line": "^0.84.0",
-    "@nivo/pie": "^0.84.0",
     "@tinymce/tinymce-react": "^4.3.2",
     "bootstrap": "^5.3.1",
     "firebase": "^10.3.1",
@@ -27,8 +20,7 @@
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.186",
     "react-router": "^6.15.0",
-    "styled-components": "^6.0.7",
-    "zod": "^3.22.4"
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
