--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.10.1",
     "react-parallax-tilt": "^1.7.186",
     "react-router": "^6.15.0",
+    "react-router-dom": "^6.21.2",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
